gccida/g2/eliminate_regs_in_insn
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3378:10: error: conflicting types for 'eliminate_regs_in_insn'
__int64  eliminate_regs_in_insn( rtx insn, unsigned int a2) 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:388:12: note: previous declaration is here
static int eliminate_regs_in_insn       PARAMS ((rtx, int));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3391:4: error: expected ';' after expression
rtx v14; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3391:5: error: use of undeclared identifier 'v14'
rtx v14; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3392:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v15; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3393:4: error: expected ';' after expression
rtx v16; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3393:5: error: use of undeclared identifier 'v16'
rtx v16; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3397:6: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx *v20; // rdx 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3387:21: note: 'v10' declared here
 struct elim_table *v10; // r12 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3397:5: error: invalid operands to binary expression ('struct rtx_def *' and 'struct elim_table *')
rtx *v20; // rdx 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3400:6: error: use of undeclared identifier 'v23'
rtx *v23; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3405:6: error: use of undeclared identifier 'v28'
rtx *v28; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3412:6: error: use of undeclared identifier 'v35'
rtx *v35; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3417:6: error: use of undeclared identifier 'v40'
rtx *v40; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3426:4: error: expected ';' after expression
rtx v50; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3426:5: error: use of undeclared identifier 'v50'
rtx v50; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3430:4: error: expected ';' after expression
rtx to_rtx; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3430:5: error: use of undeclared identifier 'to_rtx'
rtx to_rtx; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3433:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3433:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/reload1.c:3434:4: error: expected ';' after expression
rtx v58; // r13 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs_in_insn/src/obj/reload1.o] Error 1
